--- a/Css/base.css
+++ b/Css/base.css
@@ -27,6 +27,11 @@ html {
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
 .grid {
     width: 1200px;
     max-width: 100%;
@@ -55,16 +60,35 @@ html {
     width: 16.667%;
 }
 
-.grid__col-10 {
+.grid__col-3 {
     padding-left: 12px;
-    padding-right: 12px;
-    width: 83.333%;
+    padding-left: 12px;
+    width: 25%;
+}
+
+.grid__col-4 {
+    padding-left: 12px;
+    padding-left: 12px;
+    width: 33%;
 }
 
 .grid__col-5 {
     padding-left: 12px;
     padding-left: 12px;
     width: 20%;
+}
+
+.grid__col-6 {
+    padding-left: 12px;
+    padding-left: 12px;
+    width: 50%;
+}
+
+
+.grid__col-10 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 83.333%;
 }
 
 /* Button */
@@ -84,7 +108,7 @@ html {
     transition: .5s ease-out;
 }
 
-.btn:hover{
+.btn:hover {
     background-position: left;
-    cursor: pointer;    
+    cursor: pointer;
 }
