--- a/Css/index.css
+++ b/Css/index.css
@@ -140,6 +140,7 @@
     margin: auto;
     text-decoration: none;
     color: #000;
+    margin-bottom: 20px;
 }
 
 .card-outside--1 {
@@ -190,6 +191,84 @@
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, #c7e3ec 50%) top;
 }
 
-.mt-card,.card-btn:hover {
+.mt-card,
+.card-btn:hover {
     cursor: pointer;
+}
+
+
+.price_list {
+    width: 100%;
+    margin: 100px 0;
+}
+
+.pl-icon {
+    width: 100px;
+}
+
+.pl-content {
+    color: var(--text-color);
+    font-size: 1.6rem;
+}
+
+.pl-tlt {
+    font-size: 2.4rem;
+    line-height: 3rem;
+    margin: 15px 0;
+    letter-spacing: 1px;
+}
+
+.pl-text {
+    line-height: 2rem;
+}
+
+.health-care {
+    width: 100%;
+    text-align: left;
+    margin-bottom: 120px;
+}
+
+.hc-img {
+    width: 100%;
+    border-radius: 3px;
+}
+
+.hc-content {
+    display: flex;
+    align-items: center;
+}
+
+.hc-sub {
+    width: 60px;
+}
+
+.hc-sub-tlt {
+    width: fit-content;
+    font-size: 2rem;
+    color: var(--text-color);
+    transform: translateX(-30%) translateY(0) rotate(-90deg);
+}
+
+.hc-content-text {
+    margin: 10px;
+    color: var(--text-color);
+}
+
+.hc-tlt {
+    font-size: 6rem;
+    line-height: 3.7rem;
+    margin: 0;
+    padding-bottom: 10px;
+}
+
+.hc-text {
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+    margin-bottom: 60px;
+}
+
+.hc-btn {
+    font-size: 1.8rem;
+    padding: 10px 20px;
+    text-transform: uppercase;
 }
