--- a/Css/index.css
+++ b/Css/index.css
@@ -225,7 +225,7 @@
 .health-care {
     width: 100%;
     text-align: left;
-    margin-bottom: 120px;
+    margin-bottom: 100px;
 }
 
 .hc-img {
@@ -239,12 +239,13 @@
 }
 
 .hc-sub {
-    width: 60px;
+    width: 45px;
 }
 
 .hc-sub-tlt {
     width: fit-content;
-    font-size: 2rem;
+    font-size: 1.6rem;
+    margin-top: -60px;
     color: var(--text-color);
     transform: translateX(-30%) translateY(0) rotate(-90deg);
 }
@@ -264,10 +265,45 @@
 .hc-text {
     font-size: 1.8rem;
     line-height: 2.4rem;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
 }
 
 .hc-btn {
+    font-size: 1.8rem;
+    padding: 10px 20px;
+    text-transform: uppercase;
+}
+
+.parallax {
+    display: flex;
+    width: 100%;
+    height: 400px;
+    margin-bottom: 60px;
+    background-image: url(../Assets/img/bg-item.jpg);
+    background-size: cover;
+    color: #fff;
+    text-align: left;
+    align-items: center;
+}
+
+.parallax-content {
+    width: 50%;
+    margin-left: 10%;
+}
+
+.parallax-tlt {
+    font-size: 5rem;
+    line-height: 6rem;
+    margin: 0;
+}
+
+.parallax-text {
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+    margin-bottom: 40px;
+}
+
+.parallax-btn {
     font-size: 1.8rem;
     padding: 10px 20px;
     text-transform: uppercase;
