--- a/Css/index.css
+++ b/Css/index.css
@@ -1,3 +1,7 @@
+hr {
+    width: 30%;
+}
+
 .container {
     width: 80%;
     margin: auto;
@@ -191,12 +195,6 @@
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, #c7e3ec 50%) top;
 }
 
-.mt-card,
-.card-btn:hover {
-    cursor: pointer;
-}
-
-
 .price_list {
     width: 100%;
     margin: 100px 0;
@@ -307,4 +305,127 @@
     font-size: 1.8rem;
     padding: 10px 20px;
     text-transform: uppercase;
+}
+
+.menu {
+    width: 100%;
+    margin-bottom: 100px;
+}
+
+.menu-item {
+    margin-bottom: 40px;
+}
+
+.menu-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.f-p {
+    display: inline-flex;
+}
+
+.inline {
+    display: block;
+    width: calc(100% - 80px);
+    height: 1px;
+    background-color: #d1d1d1;
+    margin: 10px 10px 0 10px;
+}
+
+.from {
+    margin-right: 10px;
+    font-size: 1.5rem;
+    color: var(--text-color);
+    font-style: italic;
+    flex-shrink: 0;
+}
+
+.price-number {
+    font-size: 2.4rem;
+}
+
+.menu-ctn-tlt {
+    width: fit-content;
+    font-size: 2.4em;
+    color: var(--text-color);
+    line-height: 2.5rem;
+    margin: 0;
+    flex-shrink: 0;
+}
+
+.menu-cnt-text {
+    text-align: left;
+    font-size: 1.6rem;
+    color: var(--text-color);
+}
+
+.footer {
+    width: 100%;
+    text-align: center;
+    background-color: #F7F5F3;
+}
+
+.ft-tlt {
+    line-height: 3.4rem;
+    font-size: 3.4rem;
+    padding: 30px 0;
+    margin: 0;
+}
+
+.ft-form {
+    width: 50%;
+    padding-bottom: 60px;
+    margin: auto;
+}
+
+.ft-input {
+    width: 50%;
+    height: 40px;
+    padding-left: 20px;
+    font-size: 1.6rem;
+    color: var(--text-color);
+}
+
+.ft-btn {
+    margin-left: 10px;
+    padding: 10px 30px 12px 30px;
+}
+
+.ft-content {
+    padding: 60px 20px;
+}
+
+.ft-cnt-tlt {
+    font-size: 2.3rem;
+    margin: 0;
+    padding: 20px 0px;
+}
+
+.ft-cnt-text {
+    text-align: left;
+    font-size: 1.3rem;
+    color: var(--text-color);
+    line-height: 2rem;
+    padding: 10px 20px 0 20px;
+    margin: 0;
+}
+
+.ft-cnt-icon {
+    width: 20px;
+}
+
+.open-text {
+    display: flex;
+    justify-content: space-between;
+}
+
+.a-icon {
+    width: 20px;
+    margin: 10px 5px;
+}
+
+.a-img {
+    margin-left: 10px;
 }
