--- a/Css/blog.css
+++ b/Css/blog.css
@@ -63,6 +63,10 @@
     padding: 10px;
 }
 
+.number-page>a:hover {
+    color: black;
+}
+
 .arrow-page {
     width: 10px;
 }
@@ -74,6 +78,10 @@
 
 .posts {
     margin-bottom: 10px;
+}
+
+.posts:hover {
+    color: #6ac1db;
 }
 
 .posts-img {
@@ -108,6 +116,10 @@
     color: #4991a7;
 }
 
+.category>ul>li>a:hover {
+    color: black;
+}
+
 .tags>div {
     padding-left: 30px;
 }
@@ -118,4 +130,8 @@
     font-weight: 600;
     color: #4991a7;
     padding-right: 10px;
+}
+
+.tags>div>a:hover {
+    color: black;
 }
